--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "thomson-reuters-2",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://kiddhustle.github.io/thomson-reuters-test",
   "dependencies": {
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
